--- a/Source/MiniCast.Client/Views/HueView.xaml
+++ b/Source/MiniCast.Client/Views/HueView.xaml
@@ -4,9 +4,34 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MiniCast.Client.Views"
+             xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
+             xmlns:viewModelChromecast="clr-namespace:MiniCast.Client.ViewModel.Chromecast"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
+    <UserControl.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+    </UserControl.Resources>
+    <Grid DataContext="{Binding Hue, Source={StaticResource Locator}}" Margin="10">
+        <ListBox DataContext="{Binding DevicesEnumeratorViewModel}"
+            Visibility="{Binding IsReady, Converter={StaticResource BooleanToVisibilityConverter}}"
+            ItemsSource="{Binding KnownDevices}">
+            <ListBox.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <WrapPanel />
+                </ItemsPanelTemplate>
+            </ListBox.ItemsPanel>
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <controls:Tile Title="{Binding Address}">
+                        <Button HorizontalContentAlignment="Stretch">
+                            <Grid Width="128" Height="128">
+                                <Image Margin="32" HorizontalAlignment="Center" VerticalAlignment="Center" Source="/MiniCast.Client;component/Resources/baseline_room_service_black_18dp.png" Opacity="0.2"/>
+                            </Grid>
+                        </Button>
+                    </controls:Tile>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+        <controls:ProgressRing IsActive="{Binding DevicesEnumeratorViewModel.IsBusy}"/>
     </Grid>
 </UserControl>
