--- a/Source/MiniCast.Client/Views/HueView.xaml
+++ b/Source/MiniCast.Client/Views/HueView.xaml
@@ -50,26 +50,23 @@
 
                                     <Grid>
                                         <Grid.RowDefinitions>
-                                            <RowDefinition Height="26"/>
+                                            <RowDefinition Height="Auto"/>
+                                            <RowDefinition Height="Auto"/>
                                             <RowDefinition/>
                                         </Grid.RowDefinitions>
 
                                         <Button VerticalAlignment="Top" HorizontalAlignment="Left" Command="{Binding ConnectCommand}" Visibility="{Binding CanConnect, Converter={StaticResource BooleanToVisibilityConverter}, Mode=OneWay}">Connect</Button>
-                                        <StackPanel Orientation="Horizontal" Visibility="{Binding IsConnected, Converter={StaticResource BooleanToVisibilityConverter}, Mode=OneWay}">
+                                        <StackPanel IsHitTestVisible="False" Orientation="Horizontal" Visibility="{Binding IsConnected, Converter={StaticResource BooleanToVisibilityConverter}, Mode=OneWay}">
                                             <Image Source="/MiniCast.Client;component/Resources/baseline_done_black_18dp.png" Width="24" Height="24"/>
                                             <TextBlock VerticalAlignment="Center">Connected</TextBlock>
                                         </StackPanel>
 
-                                        <TextBlock Grid.Row="1" Foreground="Red" TextWrapping="Wrap" Text="{Binding ConnectErrorMessage}" Visibility="{Binding HasConnectErrorMessage, Converter={StaticResource BooleanToVisibilityConverter}, Mode=OneWay}"/>
+                                        <Button Grid.Row="1" Content="Test" HorizontalAlignment="Left" Command="{Binding TestCommand}" Visibility="{Binding IsConnected, Converter={StaticResource BooleanToVisibilityConverter}, Mode=OneWay}"/>
+
+                                        <TextBlock Grid.Row="2" Foreground="Red" TextWrapping="Wrap" Text="{Binding ErrorMessage}" Visibility="{Binding HasErrorMessage, Converter={StaticResource BooleanToVisibilityConverter}, Mode=OneWay}"/>
 
                                         <controls:ProgressRing Grid.RowSpan="2" IsActive="{Binding IsBusy}"/>
                                     </Grid>
-
-                                    <StackPanel Orientation="Vertical" Margin="10">
-                                        <TextBlock Text="{Binding Host}"/>
-                                        <TextBlock Text="{Binding DeviceInfo.Manufacturer}"/>
-                                        <TextBlock Text="{Binding DeviceInfo.ModelName}"/>
-                                    </StackPanel>
                                 </Grid>
                             </Grid>
                         </Grid>
