--- a/Source/MiniCast.Client/MainWindow.xaml
+++ b/Source/MiniCast.Client/MainWindow.xaml
@@ -10,6 +10,7 @@
         xmlns:viewModelChromecast="clr-namespace:MiniCast.Client.ViewModel.Chromecast"
         xmlns:viewModelHue="clr-namespace:MiniCast.Client.ViewModel.Hue"
         xmlns:core="clr-namespace:MiniCast.Client.Core"
+        xmlns:audiocontrols="clr-namespace:SpectrumAnalyzer.Controls"
         Closed="MetroWindow_Closed"
         mc:Ignorable="d"
         Title="MiniCast" Height="450" Width="800">
@@ -98,6 +99,12 @@
             <views:ChromecastActionsView HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="10"/>
         </Grid>
 
-        <!--<cscore:PeakSpectrum Grid.ColumnSpan="2" VerticalAlignment="Bottom" Height="128" IsHitTestVisible="False" DataProvider="{Binding LoopbackRecorder.Spectrum, Source={StaticResource Locator}}"></cscore:PeakSpectrum>-->
+        <audiocontrols:AudioSpectrum Grid.ColumnSpan="2" VerticalAlignment="Bottom" Height="256" IsHitTestVisible="False"
+                                     Opacity="1" ForegroundPitched="AliceBlue"
+                                     RenderTransformOrigin="0.5,0.5">
+            <!--<audiocontrols:AudioSpectrum.RenderTransform>
+                <ScaleTransform ScaleX="-1" />
+            </audiocontrols:AudioSpectrum.RenderTransform>-->
+        </audiocontrols:AudioSpectrum>
     </Grid>
 </controls:MetroWindow>
