--- a/Source/MiniCast.Client/MainWindow.xaml
+++ b/Source/MiniCast.Client/MainWindow.xaml
@@ -100,11 +100,11 @@
         </Grid>
 
         <audiocontrols:AudioSpectrum Grid.ColumnSpan="2" VerticalAlignment="Bottom" Height="256" IsHitTestVisible="False"
-                                     Opacity="1" ForegroundPitched="AliceBlue"
+                                     Opacity=".5" ForegroundPitched="AliceBlue" PitchColor="True"
                                      RenderTransformOrigin="0.5,0.5">
-            <!--<audiocontrols:AudioSpectrum.RenderTransform>
+            <audiocontrols:AudioSpectrum.RenderTransform>
                 <ScaleTransform ScaleX="-1" />
-            </audiocontrols:AudioSpectrum.RenderTransform>-->
+            </audiocontrols:AudioSpectrum.RenderTransform>
         </audiocontrols:AudioSpectrum>
     </Grid>
 </controls:MetroWindow>
