--- a/Source/MiniCast.Client/Views/MusicColorView.xaml
+++ b/Source/MiniCast.Client/Views/MusicColorView.xaml
@@ -1,12 +1,20 @@
-﻿<UserControl x:Class="MiniCast.Client.Views.HomeView"
+﻿<UserControl x:Class="MiniCast.Client.Views.MusicColorView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:effects="clr-namespace:MiniCast.Client.Effects"
              xmlns:local="clr-namespace:MiniCast.Client.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <effects:ColoredQuadEffect x:Key="ColoredQuadEffect"/>
+    </UserControl.Resources>
     <Grid>
-            
+        <Grid.Effect>
+            <effects:ColoredQuadEffect/>
+        </Grid.Effect>
+        <!-- Needs a background, or the shader doesn't run ... -->
+        <Rectangle Fill="Red"/>
     </Grid>
 </UserControl>
