--- a/Source/MiniCast.Client/MainWindow.xaml
+++ b/Source/MiniCast.Client/MainWindow.xaml
@@ -14,6 +14,9 @@
         Closed="MetroWindow_Closed"
         mc:Ignorable="d"
         Title="MiniCast" Height="450" Width="800">
+    <controls:MetroWindow.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+    </controls:MetroWindow.Resources>
     <Grid DataContext="{Binding Main, Source={StaticResource Locator}}">
         <Grid.Resources>
 
@@ -101,7 +104,7 @@
 
         <audiocontrols:AudioSpectrum Grid.ColumnSpan="2" VerticalAlignment="Bottom" Height="256" IsHitTestVisible="False"
                                      Opacity=".5" ForegroundPitched="AliceBlue" PitchColor="True"
-                                     RenderTransformOrigin="0.5,0.5">
+                                     RenderTransformOrigin="0.5,0.5" Visibility="{Binding SelectedItem.Tag.HasGlobalSpectrum, Converter={StaticResource BooleanToVisibilityConverter}, ElementName=HamburgerMenuControl}">
             <audiocontrols:AudioSpectrum.RenderTransform>
                 <ScaleTransform ScaleX="-1" />
             </audiocontrols:AudioSpectrum.RenderTransform>
