--- a/Source/MiniCast.Client/Views/MusicColorView.xaml
+++ b/Source/MiniCast.Client/Views/MusicColorView.xaml
@@ -5,16 +5,48 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:effects="clr-namespace:MiniCast.Client.Effects"
              xmlns:local="clr-namespace:MiniCast.Client.Views"
+             xmlns:colorcontrols="clr-namespace:ColorWheel.Controls"
+             xmlns:audiocontrols="clr-namespace:SpectrumAnalyzer.Controls"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             DataContext="{Binding MusicColor, Source={StaticResource Locator}}">
     <UserControl.Resources>
         <effects:ColoredQuadEffect x:Key="ColoredQuadEffect"/>
     </UserControl.Resources>
     <Grid>
-        <Grid.Effect>
-            <effects:ColoredQuadEffect/>
-        </Grid.Effect>
-        <!-- Needs a background, or the shader doesn't run ... -->
-        <Rectangle Fill="Red"/>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+
+
+        <colorcontrols:ColorWheelControl Palette="{Binding ColorPalette}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="0" Grid.Column="1" Margin="10"/>
+
+        <Grid Grid.Row="1" Height="128" x:Name="colorPreview" Margin="5">
+            <!-- Needs a background, or the shader doesn't run ... -->
+            <Rectangle Fill="Red">
+                <Rectangle.Effect>
+                    <effects:ColoredQuadEffect BaseColor="{Binding BaseColor}" HighOctavesColor="{Binding HighOctavesColor}" LowOctavesColor="{Binding LowOctavesColor}"/>
+                </Rectangle.Effect>
+            </Rectangle>
+        </Grid>
+
+        <audiocontrols:AudioSpectrum Margin="5" Grid.Row="1" VerticalAlignment="Bottom" Height="128" IsHitTestVisible="False"
+                                     Opacity=".5" ForegroundPitched="AliceBlue" PitchColor="True"
+                                     RenderTransformOrigin="0.5,0.5">
+            <audiocontrols:AudioSpectrum.RenderTransform>
+                <ScaleTransform ScaleX="-1" />
+            </audiocontrols:AudioSpectrum.RenderTransform>
+        </audiocontrols:AudioSpectrum>
+
+        <StackPanel Orientation="Vertical" Grid.Row="2" Margin="5">
+            <TextBlock Text="Live Color (With Chromecast Delay)"/>
+            <Rectangle Height="16">
+                <Rectangle.Fill>
+                    <SolidColorBrush Color="{Binding LiveColor.CurrentColor, Source={StaticResource Locator}}"/>
+                </Rectangle.Fill>
+            </Rectangle>
+        </StackPanel>
     </Grid>
 </UserControl>
