--- a/Source/MiniCast.Client/Views/MusicColorView.xaml
+++ b/Source/MiniCast.Client/Views/MusicColorView.xaml
@@ -7,6 +7,7 @@
              xmlns:local="clr-namespace:MiniCast.Client.Views"
              xmlns:colorcontrols="clr-namespace:ColorWheel.Controls"
              xmlns:audiocontrols="clr-namespace:SpectrumAnalyzer.Controls"
+             xmlns:localcontrols="clr-namespace:MiniCast.Client.Controls" 
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              DataContext="{Binding MusicColor, Source={StaticResource Locator}}">
@@ -14,7 +15,7 @@
         <effects:ColoredQuadEffect x:Key="ColoredQuadEffect"/>
     </UserControl.Resources>
     <Grid>
-        <Grid.RowDefinitions>
+        <!--<Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -24,7 +25,7 @@
         <colorcontrols:ColorWheelControl Palette="{Binding ColorPalette}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="0" Grid.Column="1" Margin="10"/>
 
         <Grid Grid.Row="1" Height="128" x:Name="colorPreview" Margin="5">
-            <!-- Needs a background, or the shader doesn't run ... -->
+            --><!-- Needs a background, or the shader doesn't run ... --><!--
             <Rectangle Fill="Red">
                 <Rectangle.Effect>
                     <effects:ColoredQuadEffect BaseColor="{Binding BaseColor}" HighOctavesColor="{Binding HighOctavesColor}" LowOctavesColor="{Binding LowOctavesColor}"/>
@@ -47,6 +48,8 @@
                     <SolidColorBrush Color="{Binding LiveColor.CurrentColor, Source={StaticResource Locator}}"/>
                 </Rectangle.Fill>
             </Rectangle>
-        </StackPanel>
+        </StackPanel>-->
+
+        <localcontrols:ColorGrid Gradient="{Binding ColorGradient}"/>
     </Grid>
 </UserControl>
