--- a/Source/MiniCast.Client/Controls/ColorGrid.xaml
+++ b/Source/MiniCast.Client/Controls/ColorGrid.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MiniCast.Client.Controls"
+             xmlns:wheel="clr-namespace:ColorWheel.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid
@@ -18,19 +19,16 @@
             BorderBrush="White"
             BorderThickness="2">
 
-            <!--<Image
-                HorizontalAlignment="Stretch"
-                VerticalAlignment="Stretch"
-                x:Name="spectrum">
-            </Image>-->
-
         </Border>
 
-        <Canvas x:Name="canvasSpectrum" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+        <Canvas x:Name="canvasSpectrum" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" MouseDown="CanvasSpectrum_MouseDown">
             <Canvas.Background>
                 <LinearGradientBrush x:Name="canvasBrush" EndPoint="1,0"/>
             </Canvas.Background>
         </Canvas>
+
+        <wheel:GradientStopPinpoint x:Name="StartPin" Width="16" Height="16" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <wheel:GradientStopPinpoint x:Name="EndPin" Width="16" Height="16" HorizontalAlignment="Right" VerticalAlignment="Center"/>
 
     </Grid>
 </UserControl>
