--- a/Source/MiniCast.Client/Views/MusicColorView.xaml
+++ b/Source/MiniCast.Client/Views/MusicColorView.xaml
@@ -3,7 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:effects="clr-namespace:MiniCast.Client.Effects"
              xmlns:local="clr-namespace:MiniCast.Client.Views"
              xmlns:colorcontrols="clr-namespace:ColorWheel.Controls"
              xmlns:audiocontrols="clr-namespace:SpectrumAnalyzer.Controls"
@@ -12,29 +11,9 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              DataContext="{Binding MusicColor, Source={StaticResource Locator}}">
-    <UserControl.Resources>
-        <effects:ColoredQuadEffect x:Key="ColoredQuadEffect"/>
-    </UserControl.Resources>
     <Grid>
-        <!--<Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-
-
-        <colorcontrols:ColorWheelControl Palette="{Binding ColorPalette}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="0" Grid.Column="1" Margin="10"/>
-
-        <Grid Grid.Row="1" Height="128" x:Name="colorPreview" Margin="5">
-            --><!-- Needs a background, or the shader doesn't run ... --><!--
-            <Rectangle Fill="Red">
-                <Rectangle.Effect>
-                    <effects:ColoredQuadEffect BaseColor="{Binding BaseColor}" HighOctavesColor="{Binding HighOctavesColor}" LowOctavesColor="{Binding LowOctavesColor}"/>
-                </Rectangle.Effect>
-            </Rectangle>
-        </Grid>-->
-
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="256"/>
@@ -55,9 +34,14 @@
             <toolkit:ColorPicker Background="Transparent" SelectedColor="{Binding BaseColor}"/>
         </StackPanel>
 
-        <localcontrols:ColorGrid Grid.Row="2" x:Name="colorGrid" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Gradient="{Binding ColorGradient}"/>
+        <StackPanel Grid.Row="2" Orientation="Vertical" Margin="5">
+            <TextBlock Text="Music Sensitivity"/>
+            <Slider Maximum="100" Value="{Binding Sensitivity}"/>
+        </StackPanel>
 
-        <audiocontrols:AudioSpectrum Grid.Row="2" Margin="0,0,0,4" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" IsHitTestVisible="False"
+        <localcontrols:ColorGrid Grid.Row="3" x:Name="colorGrid" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Gradient="{Binding ColorGradient}"/>
+
+        <audiocontrols:AudioSpectrum Grid.Row="3" Margin="0,0,0,4" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" IsHitTestVisible="False"
                                      Opacity=".5" ForegroundPitched="AliceBlue" PitchColor="True"
                                      RenderTransformOrigin="0.5,0.5">
             <audiocontrols:AudioSpectrum.RenderTransform>
@@ -65,7 +49,7 @@
             </audiocontrols:AudioSpectrum.RenderTransform>
         </audiocontrols:AudioSpectrum>
 
-        <ScrollViewer Grid.Row="3">
+        <ScrollViewer Grid.Row="4">
             <toolkit:ColorCanvas Background="Transparent" Foreground="White" SelectedColor="{Binding Path=CurrentStop.Color, ElementName=colorGrid}"/>
         </ScrollViewer>
     </Grid>
